--- a/音频播放器/player.html
+++ b/音频播放器/player.html
@@ -176,6 +176,7 @@
 </body>
 <script>
     $(function () {
+    	window.onload=function(){
         var key = true;
         var key2 = true;
         $(".range2").val(0);
@@ -342,6 +343,7 @@
             }
             obj.html(c + ":" + s)
         }
+    	}
     })
 </script>
 </html>
