--- a/fightCows/index.html
+++ b/fightCows/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
       <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+      <script src="assets/js/debug.js"></script>
       <title>斗牛</title>
   </head>
 <body>
