--- a/bbb.html
+++ b/bbb.html
@@ -1,12 +1,16 @@
-<<<<<<< Updated upstream
-"blue"
-=======
-"greenlocal"
->>>>>>> Stashed changes
-
-  
-  
-  wo shi xianqian de 5654564
-
-wo shi hou lai de 123456789
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>helloworld</title>
+</head>
+<body>
+    helloworld6666
+</body>
+<script>
+    var good = 'jklj';
+</script>
+</html>
 
